--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="description">Musebeat, a lightweight, free-for-all Spotify Alternative</string>
     <string name="recently_played">Recently Played</string>
     <string name="top_songs">Top Songs</string>
+    <string name="download_song">Download Song</string>
 </resources>
